k8s_nginx_app_only_for_test/simple-nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx-deploy
  labels:
    app: mysimplenginx
    env: dev
    owner: sensor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      containers:
      - name: simple-nginx
        image: sensor1986/simple-site
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: simple-nginx-service
  labels:
    env: dev
    owner: sensor
spec:
  selector:
    app: simple-nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-nginx-ingress
  namespace: default
spec:
  rules:
  - host: sensor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-nginx
            port:
              number: 80
